@@ -1,4 +1,5 @@
 0.04
+ - Improve DESCRIPTION sections in doc.
 
 0.03 2025-02-09T17:08:43+01:00
  - Add DESCRIPTION section to doc.
